--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: LearnAndGame_development
+  database: LearninGame_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: LearnAndGame_test
+  database: LearninGame_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: LearnAndGame_production
-  username: LearnAndGame
-  password: <%= ENV['LEARNANDGAME_DATABASE_PASSWORD'] %>
+  database: LearninGame_production
+  username: LearninGame
+  password: <%= ENV['LEARNINGAME_DATABASE_PASSWORD'] %>
